--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <title>To-Do-App</title>
+    <title>Javascript</title>
 </head>
 <body>
-        <h1>TO DO LIST</h1>
-            <input type="text" id="task" placeholder="Add a new task...">
-            <button id="add" onclick="addnotes()">Add</button>
-        <ul id="taskList"> </ul>
-    <script src="script.js"></script>
+    <center>
+    <h1>TO-DO-LIST</h1>
+        <input id="inputField" type="text"><button id="addToDo">Add</button>
+        <div class="to-dos" id="toDoContainer"></div>
+    <script src="main.js"></script>
+    </center>
 </body>
 </html>
